# olyvslideconv

./: CMakeLists.txt  Makefile.in  Makefile.vc  README  README.txt  TODO  aclocal.m4  autogen.sh  conf.h.in  conf.h.in~  configure  configure.ac  configure.ac~  install.sh  nmake.opt
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
include/: blendbkgd.h  cmdoptions.h  composite.h  console-mswin.h  console-unix.h  getopt-mswin.h  imagesupport.h  jpgcachesupport.h  jpgsupport.h  olyvslideconv.h  safebmp.h  tiffsupport.h  zipsupport.h
src/: Makefile.am  Makefile.in  Makefile.vc  blend.cc  cmdoptions.cc  composite-read.cc  composite-read.cpp  composite.cc  composite.testing.cc  console-mswin.cc  console-unix.cc  drawing.cc  drawing.cpp  imagesupport.cc  imagesupport.cpp  initmagick.cc  jpgcachesupport.cc  jpgsupport.cc  memleaks.txt  oly2gmap.cpp  olyvslideconv.cc  olyvslideconv.cpp  safebmp.cc  svsinfo.cpp  tiffsupport.cc  zipsupport.cc
